tests/cases/scc/error/0009-unmatchedcppelif.c.res
./tests/cases/scc/error/0009-unmatchedcppelif.c:8:1:	error:   unmatched #else.
exit code 1
